--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,13 @@ edition = "2018"
 [dependencies]
 byteorder = "1.0"
 bitflags = "1.0"
+log = "0.4.6"
+env_logger = {version = "0.6.0", optional = true }
 
 [[bin]]
 name = "test_std"
 path = "src/bin/test_std.rs"
+required-features = ["binaries"]
+
+[features]
+binaries = ["env_logger"]
