--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ bitflags = "1.0"
 log = "0.4.6"
 env_logger = {version = "0.6.0", optional = true }
 
+[dependencies.arrayvec]
+default-features = false
+version = "0.4.10"
+features = ["array-sizes-33-128"]
+
 [[bin]]
 name = "test_std"
 path = "src/bin/test_std.rs"
