--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ byteorder = "1.0"
 bitflags = "1.0"
 log = "0.4.6"
 env_logger = {version = "0.6.0", optional = true }
+structview = { version = "0.3", default-features = false }
+
 
 [dependencies.arrayvec]
 default-features = false
