--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,7 @@
-[package]
-name = "kfs_libfs"
-version = "0.1.0"
-authors = ["Thog <me@thog.eu>"]
-edition = "2018"
+[workspace]
 
-[dependencies]
-byteorder = "1.0"
-bitflags = "1.0"
-log = "0.4.6"
-env_logger = {version = "0.6.0", optional = true }
-structview = { version = "0.3", default-features = false }
-
-
-[dependencies.arrayvec]
-default-features = false
-version = "0.4.10"
-features = ["array-sizes-33-128"]
-
-[dependencies.num-traits]
-version = "0.2"
-default-features = false
-
-[[bin]]
-name = "test_std"
-path = "src/bin/test_std.rs"
-required-features = ["binaries"]
-
-[features]
-binaries = ["env_logger"]
+members = [
+    "libfs",
+    "libfat",
+    "libfs_fat"
+]
