--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kfs_libfs"
+name = "libfat"
 version = "0.1.0"
 authors = ["Thog <me@thog.eu>"]
 edition = "2018"
@@ -8,9 +8,8 @@ edition = "2018"
 byteorder = "1.0"
 bitflags = "1.0"
 log = "0.4.6"
-env_logger = {version = "0.6.0", optional = true }
 structview = { version = "0.3", default-features = false }
-
+libfs = { path = "../libfs" }
 
 [dependencies.arrayvec]
 default-features = false
@@ -20,11 +19,3 @@ features = ["array-sizes-33-128"]
 [dependencies.num-traits]
 version = "0.2"
 default-features = false
-
-[[bin]]
-name = "test_std"
-path = "src/bin/test_std.rs"
-required-features = ["binaries"]
-
-[features]
-binaries = ["env_logger"]
