--- a/storage_device/Cargo.toml
+++ b/storage_device/Cargo.toml
@@ -4,6 +4,9 @@ version = "1.0.0"
 authors = ["Thog <me@thog.eu>", "orycterope <tvermeilh@gmail.com>"]
 edition = "2018"
 
+[package.metadata.docs.rs]
+features = ["cached-block-device"]
+
 [dependencies]
 lru = { git = "https://github.com/Orycterope/lru-rs", optional = true }
 spin = { version = "0.5.0", optional = true }
