--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ arrayvec = {version = "0.4", default-features = false, features = ["array-sizes-
 byteorder = { version = "1.0", default-features = false }
 log = "0.4.6"
 num-traits = { version = "0.2", default-features = false }
-storage_device = { path = "../storage_device" }
+storage_device = { git = "https://github.com/sunriseos/storage_device.git" }
 structview = { version = "0.3", default-features = false }
