--- a/libfat/Cargo.toml
+++ b/libfat/Cargo.toml
@@ -9,6 +9,6 @@ arrayvec = {version = "0.4", default-features = false, features = ["array-sizes-
 byteorder = { version = "1.0", default-features = false }
 log = "0.4.6"
 num-traits = { version = "0.2", default-features = false }
-storage_device = { git = "https://github.com/sunriseos/storage_device.git" }
+storage_device = { git = "https://github.com/sunriseos/storage_device.git", default-features = false, features = ["cached-block-device-nightly"] }
 spin = { version = "0.5.0"}
 structview = { version = "0.3", default-features = false }
