--- a/libfs_fat/Cargo.toml
+++ b/libfs_fat/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 libfs = { path = "../libfs" }
 libfat = { path = "../libfat" }
-storage_device = { git = "https://github.com/sunriseos/storage_device.git" }
+storage_device = { git = "https://github.com/sunriseos/storage_device.git", default-features = false, features = ["cached-block-device-nightly"] }
 log = "0.4.6"
 env_logger = {version = "0.6.0", optional = true }
 
